--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>my second github repo</title>
 </head>
 <body>
-    
+    <h1>Header Area</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid nam, tenetur magnam accusamus saepe repudiandae odio non ipsa vel ipsum, cupiditate facere qui optio possimus nemo dignissimos modi alias ducimus.</p>
 </body>
 </html>
